--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 build/**
 src/THC-chess/CMakeFiles/**
 src/UCI/output.png
+output.png
 proposal/__latexindent_temp.tex
 proposal/proposal.*
 !proposal/proposal.pdf
