--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/main.out",
+            "program": "${workspaceFolder}/build/MCTSsingle.out",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
