1. fix MCTSroot expand 0 children 2. fix MCTSroot quit and leave thread dangling 3. add time limit on simulate

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/MCTSsingle.out",
-            "args": [],
+            "program": "${workspaceFolder}/build/MCTSroot.out",
+            "args": ["<", "test_input.txt"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
